bug: left-hand hex border cropped off

--- a/src/components/Tilegram/TilegramHex/styles.scss
+++ b/src/components/Tilegram/TilegramHex/styles.scss
@@ -81,6 +81,6 @@
 }
 
 .defocusedgrey {
-  fill: #ebebeb;
+  fill: var(--De-emphasis);
   --allocation-n: rgb(74, 74, 74);
 }
